# cooking-recipe-api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: checks.yaml
app/: settings.py
src/: manage.py
src/app/: calc.py  settings.py
src/app/tests/: test_app_calc.py
