[project]
name = "cooking-recipe-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["django>=6.0.2", "djangorestframework>=3.16.1"]

[dependency-groups]
dev = ["pyrefly>=0.51.0", "ruff>=0.15.0"]


[tool.ruff]
target-version = "py314"
exclude = ["migrations", "manage.py", "settings.py"]

[tool.ruff.lint]
select = [
    # pycodestyle err
    "E",
    # Pyflakes
    "F",
    # pycodestyle warn
    "W",
    # isort
    "I",
    # Django rules
    "DJ",
]
